<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/g_toolbar_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-black"
        android:padding="16dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/g_toolbar_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_sign_in"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-black"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/b_sign_up"
        app:layout_constraintEnd_toStartOf="@id/b_sign_up"
        app:layout_constraintTop_toTopOf="@id/b_sign_up"
        tools:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="20sp"
            tools:text="User Name" />

        <TextView
            android:id="@+id/b_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/sign_out"
            android:textColor="@color/grey" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_initials"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_card_grey"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/ll_username"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toStartOf="@id/ll_username"
        app:layout_constraintTop_toTopOf="@id/ll_username" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:indeterminateTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/ll_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_initials"
        app:layout_constraintTop_toTopOf="@id/ll_username" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/g_sign_out_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ll_username"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_toolbar_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/v_logged_out_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_card_black"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintTop_toBottomOf="@+id/b_sign_up"
        tools:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:lineSpacingExtra="8sp"
            android:text="@string/lets_start"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/configure"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_go_to_docs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif-black"
            android:padding="16dp"
            android:text="@string/go_to_docs"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/v_logged_in_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/tv_footer_name"
        app:layout_constraintTop_toBottomOf="@+id/ll_username">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/v_logged_in_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_card_black"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="32dp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/woohoo"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/build_the_stuff"
                    android:textColor="@color/white"
                    android:textSize="32sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_next_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/next_steps"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_logged_in_card"
                app:layout_constraintVertical_chainStyle="spread_inside"
                app:layout_goneMarginBottom="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <androidx.constraintlayout.widget.Group
        android:id="@+id/gr_logged_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="b_sign_in,b_sign_up,v_logged_out_card"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gr_logged_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_initials,ll_username,progress,v_logged_in_container"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gr_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_initials,ll_username" />

    <TextView
        android:id="@+id/tv_rights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/rights"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/visit_help"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_rights"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_footer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/tv_help"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>